Refined final milestone; added AI vs AI option, added external support, also added highscore refinements